# Huffman

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  huffman.cpp  huffman.hpp  main.cpp
test/: CMakeLists.txt  test.cpp
